--- a/client_for_4g/Makefile
+++ b/client_for_4g/Makefile
@@ -1,11 +1,11 @@
 # Makefile for client 4g transfer 
 
-src	:=main.c
+src	:=main.c queue.c
 
 PHONY	:=all
 
 all:$(src)
-	gcc -o main $< -lpthread
+	gcc -o main $^ -lpthread
 	
 .PHONY:clean
 
